update greeting message and link in Index.cshtml

--- a/ClinicaApp/Views/Home/Index.cshtml
+++ b/ClinicaApp/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h3 class="display-4">Buenas Tardes</h3>
+    <p>Learn about <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjw7OaYj-WOAxUzTDABHUQnIrYQFnoECAoQAQ&url=https%3A%2F%2Fwww.masterduelmeta.com%2F&usg=AOvVaw24jgiOHzY8-WTrKYzClti3&opi=89978449">building Web apps with ASP.NET Core</a>.</p>
 </div>
