--- a/ClinicaApp/Views/Home/Index.cshtml
+++ b/ClinicaApp/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h3 class="display-4">Buenas Tardes</h3>
-    <p>Learn about <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjw7OaYj-WOAxUzTDABHUQnIrYQFnoECAoQAQ&url=https%3A%2F%2Fwww.masterduelmeta.com%2F&usg=AOvVaw24jgiOHzY8-WTrKYzClti3&opi=89978449">building Web apps with ASP.NET Core</a>.</p>
+    <p>Learn about <a href="https://www.masterduelmeta.com">building Web apps with ASP.NET Core</a>.</p>
 </div>
