--- a/ClinicaApp/Views/Home/Index.cshtml
+++ b/ClinicaApp/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<body>
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET</a>.</p>
 </div>
+
+
+
+</body>
