--- a/ClinicaApp/wwwroot/css/site.css
+++ b/ClinicaApp/wwwroot/css/site.css
@@ -1,3 +1,5 @@
+
+
 html {
   font-size: 14px;
 }
@@ -17,6 +19,14 @@ html {
   min-height: 100%;
 }
 
+
 body {
   margin-bottom: 60px;
+  
 }
+
+/* .container-fluid{
+  background-color: aqua;
+} */
+
+
