fix: update link text in Index.cshtml for clarity

--- a/ClinicaApp/Views/Home/Index.cshtml
+++ b/ClinicaApp/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h3 class="display-4">Buenas Tardes</h3>
-    <p>Learn about <a href="https://www.masterduelmeta.com">building Web apps with ASP.NET Core</a>.</p>
+    <p>Learn about <a href="https://www.masterduelmeta.com">Informacion sobre el tier</a>.</p>
 </div>
